<resources>
    <string name="app_name">YourRhythm</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="welcome_to_">Welcome to</string>
    <string name="your_rhythm">Your Rhythm!</string>
    <string name="logo_desc">Logo</string>
    <string name="choose_your">Choose your nickname</string>
    <string name="fav_genre">Choose your favorite music genres</string>
    <string name="enter_text">Type here&#8230;</string>
    <string name="set_up">You\'re all set up!</string>
    <string name="username">Username</string>
    <string name="settings">Settings</string>
    <string name="app_pow">App powered by</string>
    <string name="change_username">Change username</string>
    <string name="change_preferences">Change preferences</string>
    <string name="adjust_accuracy">Adjust accuracy</string>
    <string name="clear_data">Clear data</string>
    <string name="change_user">Change username</string>
    <string name="change_pref">Change preferences</string>
    <string name="adjust">Adjust accuracy</string>
    <string name="number">5</string>
    <string name="note_accura">Note: Accuracy represents possible difference between your heart rate and song\'s tempo. \n Choose value from 0 to 15, default is 5.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="warning">Warning</string>
    <string name="no_device_c">No device connected.</string>
    <string name="connection_lost">No Internet connection.</string>
    <string name="ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="u_sure">Are you sure?</string>
    <string name="all_data">All data will be lost.</string>
    <string name="choose_watch">Choose watch:</string>
    <string name="watch">Watch</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
</resources>