<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_to_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="4sp"
        android:text="@string/welcome_to_"
        android:textAppearance="@style/welcome_to_"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/your_rhythm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:text="@string/your_rhythm"
        android:textAppearance="@style/your_rhythm"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="253dp"
        android:layout_height="253dp"
        android:src="@drawable/logo_icon"
        android:contentDescription="@string/logo_desc"/>
</LinearLayout>
