<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingTop="20dp">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/arrow"
        android:contentDescription="@string/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp" />

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/save"
        android:textAppearance="@style/settings"
        android:textStyle="bold"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="21dp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CACACA"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="77dp"/>

    <TextView
        android:id="@+id/choose_your"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3sp"
        android:text="@string/adjust"
        android:textAppearance="@style/change_user"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/number"
        android:layout_marginBottom="64dp" />

    <TextView
        android:id="@+id/subtract_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle"
        android:text="@string/minus"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/number"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/number"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:background="@drawable/number"
        android:gravity="center"
        android:text="@string/number"
        android:textStyle="bold"
        android:textAppearance="@style/number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/add_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle"
        android:text="@string/plus"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/number"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/note_accura"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:text="@string/note_accura"
        android:textAppearance="@style/note_accura"
        android:lineSpacingExtra="2sp"
        android:gravity="center_horizontal|top"
        app:layout_constraintTop_toBottomOf="@id/number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="17dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
