<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="220dp"
    android:layout_height="160dp"
    android:background="@drawable/popup_background"
    android:paddingTop="20dp"
    android:elevation="16dp" >

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/u_sure"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/no_device_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_data"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <View
        android:id="@+id/line_5"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#7ADAF1"
        app:layout_constraintTop_toBottomOf="@id/no_device_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <View
        android:id="@+id/line_6"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="#7ADAF1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_5" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/line_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/line_6"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delete"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/line_5"
        app:layout_constraintLeft_toRightOf="@id/line_6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
