<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="220dp"
    android:layout_height="160dp"
    android:background="@drawable/popup_background"
    android:paddingTop="20dp"
    android:paddingBottom="15dp"
    android:elevation="16dp" >

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/no_device_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_device_c"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <View
        android:id="@+id/line_5"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#7ADAF1"
        app:layout_constraintTop_toBottomOf="@id/no_device_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/line_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
