<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingTop="20dp">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/arrow"
        android:contentDescription="@string/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp" />

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/save"
        android:textAppearance="@style/settings"
        android:textStyle="bold"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="21dp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CACACA"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="77dp"/>

    <TextView
        android:id="@+id/choose_your"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3sp"
        android:text="@string/change_username"
        android:textAppearance="@style/change_user"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputContainer"
        android:layout_marginBottom="80dp" />

    <FrameLayout
        android:id="@+id/inputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:id="@+id/rectangle_1"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:background="#2E2D31"
            android:alpha="0.03"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#2E2D31"
            android:layout_gravity="bottom"/>

        <EditText
            android:id="@+id/username_change"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/enter_text"
            android:importantForAutofill="no"
            android:textColor="#2E2D31"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:inputType="text"
            android:textColorHint="#2E2D31"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

