<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/account_circle"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/account_circle"
        android:contentDescription="Account Icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="21dp"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="42dp"
        android:text="@string/username"
        android:textAppearance="@style/username"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/account_circle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_pow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="25dp"
        android:text="@string/app_pow"
        android:textAppearance="@style/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add" />

    <ImageView
        android:id="@+id/add"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:src="@drawable/add"
        android:contentDescription="Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="123dp" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2E2D31"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="91dp"/>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/settings"
        android:contentDescription="Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="31dp" />

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginBottom="35dp"
        android:text="@string/settings"
        android:textAppearance="@style/username"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/settings" />


</androidx.constraintlayout.widget.ConstraintLayout>