<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/arrow"
        android:contentDescription="Settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/settings"
        android:textAppearance="@style/settings"
        android:textStyle="bold"
        android:layout_marginTop="23dp"
        android:layout_marginStart="64dp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CACACA"
        app:layout_constraintTop_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="77dp"/>

<!--    FIRST TAB-->

    <ImageView
        android:id="@+id/user"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/account_circle"
        android:contentDescription="User"
        app:layout_constraintTop_toTopOf="@id/line"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp" />

    <TextView
        android:id="@+id/change_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/line"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/change_username"
        android:textAppearance="@style/settings"
        android:layout_marginTop="23dp"
        android:layout_marginStart="64dp" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2E2D31"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="76dp"/>


    <!--   SECOND TAB-->

    <ImageView
        android:id="@+id/preferences"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/music_note"
        android:contentDescription="Note"
        app:layout_constraintTop_toTopOf="@id/line2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp" />

    <TextView
        android:id="@+id/change_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/line2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/change_preferences"
        android:textAppearance="@style/settings"
        android:layout_marginTop="23dp"
        android:layout_marginStart="64dp" />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CACACA"
        app:layout_constraintTop_toTopOf="@id/line2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="76dp"/>

    <!--   THIRD TAB-->

    <ImageView
        android:id="@+id/adjust"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/timer"
        android:contentDescription="Timer"
        app:layout_constraintTop_toTopOf="@id/line3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp" />

    <TextView
        android:id="@+id/adjust_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/line3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/adjust_accuracy"
        android:textAppearance="@style/settings"
        android:layout_marginTop="23dp"
        android:layout_marginStart="64dp" />

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CACACA"
        app:layout_constraintTop_toTopOf="@id/line3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="76dp"/>

    <!--   FOURTH TAB-->

    <ImageView
        android:id="@+id/clear"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/layers_clear"
        android:contentDescription="Clear"
        app:layout_constraintTop_toTopOf="@id/line4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp" />

    <TextView
        android:id="@+id/clear_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/line4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/clear_data"
        android:textAppearance="@style/clear_data"
        android:layout_marginTop="23dp"
        android:layout_marginStart="64dp" />

    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CACACA"
        app:layout_constraintTop_toTopOf="@id/line4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="76dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>