<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="54dp"
        android:text="@string/choose_watch"
        android:textAppearance="@style/username"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/leftWatch"
        android:layout_width="134dp"
        android:layout_height="143dp"
        android:layout_marginTop="176dp"
        android:alpha="0.45"
        android:contentDescription="@string/watch"
        android:src="@drawable/watch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rightWatch"
        android:layout_width="134dp"
        android:layout_height="143dp"
        android:layout_marginTop="176dp"
        android:contentDescription="@string/watch"
        android:src="@drawable/watch"
        android:alpha="0.45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/watchImg"
        android:layout_width="186dp"
        android:layout_height="186dp"
        android:src="@drawable/watch"
        android:contentDescription="@string/watch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp" />

    <ImageView
        android:id="@+id/arrowLeft"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="232dp"
        android:contentDescription="@string/watch"
        android:src="@drawable/keyboard_arrow_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrowRight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="232dp"
        android:contentDescription="@string/watch"
        android:src="@drawable/keyboard_arrow_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/watch_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="96dp"
        android:text="@string/watch"
        android:textAppearance="@style/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/watchImg" />

    <TextView
        android:id="@+id/watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="14dp"
        android:text="@string/watch"
        android:textAppearance="@style/username"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/watch_label" />

    <TextView
        android:id="@+id/status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="21dp"
        android:text="@string/status"
        android:textAppearance="@style/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/watch" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="14dp"
        android:text="@string/active"
        android:textStyle="bold"
        android:textAppearance="@style/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_label" />

    <View
        android:id="@+id/status_icon"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/active_circle"
        app:layout_constraintStart_toEndOf="@id/status"
        app:layout_constraintTop_toBottomOf="@id/status_label" />


</androidx.constraintlayout.widget.ConstraintLayout>