<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingTop="20dp">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/arrow"
        android:contentDescription="@string/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp" />

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/save"
        android:textAppearance="@style/settings"
        android:textStyle="bold"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="21dp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CACACA"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="77dp"/>

    <TextView
        android:id="@+id/choose_your"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3sp"
        android:text="@string/change_preferences"
        android:textAppearance="@style/change_user"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputContainer"
        android:layout_marginBottom="66dp" />


    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <include
            layout="@layout/first_row_settings"
            android:id="@+id/firstRow"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="5dp"/>

        <include
            layout="@layout/second_row_settings"
            android:id="@+id/secondRow"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="5dp"/>

        <include
            layout="@layout/third_row_settings"
            android:id="@+id/thirdRow"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="5dp"/>

        <include
            layout="@layout/fourth_row_settings"
            android:id="@+id/fourthRow"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="5dp"/>

        <include
            layout="@layout/first_row_settings"
            android:id="@+id/fifthRow"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

